--- a/ElectronicStore-webapp/src/main/resources/application.properties
+++ b/ElectronicStore-webapp/src/main/resources/application.properties
@@ -19,3 +19,6 @@ user.profile.image.path=images/users/
 category.image.path=images/categories/
 product.image.path=images/products/
 
+#spring.security.user.name=Mukul
+#spring.security.user.password=ADMIN
+
